2002-01-25  Naba Kumar <kh_naba@users.sourceforge.net>

	* scripts/*: Added files which I forgot previously.
	
2002-01-25  Naba Kumar <kh_naba@users.sourceforge.net>

	* src/an_symbol_view.c: Added MAX_STRING_LENGTH
	
	* tagmanager/tm_source_file.c, regex.c, parse.c:
	  defined and delimited g_messages within #debug.
	  
	* src/preferences.c, data/anjuta.properties:
	  saved/defied message-manager tag position in string.
	  Message tag possition is saved between sessions. And
	  and tag position bottom as default.
	  
2002-01-25  Naba Kumar <kh_naba@users.sourceforge.net>

	Patch submitted by:
	Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>

	* Makefile.am
	  configure.in
	  data/Makefile.am
	  data/properties/Makefile.am
	  global-tags/Makefile.am
	  pixmaps/Makefile.am
	  src/Makefile.am
	  src/an_file_view.c
	  src/an_file_view.h
	  src/an_symbol_view.c
	  src/an_symbol_view.h
	  src/anjuta.c
	  src/anjuta_cbs.c
	  src/file_history.c
	  src/file_history.h
	  src/message-manager-private.cc
	  src/pixmaps.h
	  src/project_dbase.c
	  src/project_dbase_gui.c
	  src/tags_manager.c
	  src/text_editor.c
	  src/utilities.c
	  src/utilities.h
	  src/watch_gui.c:
	
	  Modified files.
	
	* scripts/*
	  pixmaps/sv_class.xpm
	  pixmaps/sv_function.xpm
	  pixmaps/sv_macro.xpm
	  pixmaps/sv_private_fun.xpm
	  pixmaps/sv_private_var.xpm
	  pixmaps/sv_protected_fun.xpm
	  pixmaps/sv_protected_var.xpm
	  pixmaps/sv_public_fun.xpm
	  pixmaps/sv_public_var.xpm
	  pixmaps/sv_static_fun.xpm
	  pixmaps/sv_static_var.xpm
	  pixmaps/sv_struct.xpm
	  pixmaps/sv_unknown.xpm
	  pixmaps/sv_variable.xpm
	  pixmaps/fv_core.xpm
	  pixmaps/fv_text.xpm
	  pixmaps/filestoremove.txt:
	
	  New files.
	
	* pixmaps/class.xpm
	  pixmaps/function.xpm
	  pixmaps/fv_autofile.xpm
	  pixmaps/fv_doc.xpm
	  pixmaps/fv_i18n.xpm
	  pixmaps/fv_source.xpm
	  pixmaps/private_func.xpm
	  pixmaps/private_var.xpm
	  pixmaps/protected_func.xpm
	  pixmaps/protected_var.xpm
	  pixmaps/public_func.xpm